[tool.poetry]
name = "convertio-python"
version = "0.1.1"
description = "Convertio APIs Client Library for Python"
authors = ["Okba Boularaoui <okba2fb@gmail.com>"]
readme = "README.md"
packages = [{include = "convertio"}]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
